# Fractal-Generator

./: Dockerfile  Mandelbrot.py  README.md  commonEq.py  docker-compose.debug.yml  docker-compose.yml  main.py  mcConverter.py  pyproject.toml  requirements.txt  testClass.py  test_all.py  utils.py
GUI/: GUIBrot.py  GUIutils.py  commonEq.py  gui.py  main.py  preset.py
experiments/: ex.py
