[tool.poetry]
name = "repl_python3_Finally-Understanding-the-Mandelbrot-Set"
version = "0.1.0"
description = ""
authors = ["Cole Fleming <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
